# libxmldiff

./: CMakeLists.txt  LibraryConfig.cmake.in  conanfile.py
src/: CMakeLists.txt  libxmldiff.h  lx2_ops.cpp  lx2_parse.cpp  xmldiff.cpp
